--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <header>
         <h1>Scriptum Cordis, Solum Caelis</h1>
-        <p class="tagline">Karena tak semua kisah ditulis untuk dibaca kembali. Ada yang cukup dibisikkan ke langit.</p>
+        <p class="tagline">Setiap kata berasal dari luka yang tak bersuara, mengalir hanya pada langit yang mengerti, tak pernah membalas. Karena tak semua kisah ditulis untuk dibaca kembali. Ada yang cukup dibisikkan ke langit.</p>
     </header>
 
     <nav>
-        <a href="#">Beranda</a>
-        <a href="#">Arsip</a>
-        <a href="#">Tentang</a>
+        <a href="#">Home</a>
+        <a href="#">Archive</a>
+        <a href="#">About</a>
     </nav>
 
     <main>
@@ -24,12 +24,12 @@
             <h2>Di Antara Harapan yang Tak Kembali</h2>
             <p class="date">25 Juni 2025</p>
             <p>
-                Kadang aku bertanya, apakah langit mencatat semua yang kutitipkan diam-diam?
-                Harapan itu bukan hilang—ia hanya tidak kembali dalam bentuk yang kuinginkan.
+                Kadang aku bertanya, apakah semesta mencatat semua yang kutitipkan diam-diam?
+                Harapan itu bukan hilang, ia hanya tak kembali dalam bentuk yang kuinginkan.
             </p>
             <p>
-                Maka kutulis, bukan untuk dibaca, tapi untuk dilepaskan. Karena hatiku sudah terlalu penuh
-                untuk memikul sunyi ini sendiri.
+                Maka kutulis, bukan untuk dibaca, tapi untuk dilepaskan. Karena jiwaku sudah terlalu penuh,
+                untuk memikul sunyi yang riuh.
             </p>
         </article>
     </main>
