--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
     <header>
         <h1>Scriptum Cordis, Solum Caelis</h1>
-        <p class="tagline">Setiap kata berasal dari luka yang tak bersuara, mengalir hanya pada langit yang mengerti, tak pernah membalas.
-            Karena tak semua kisah ditulis untuk dibaca kembali. Ada yang cukup dibisikkan ke langit.</p>
+        <p class="tagline">Karena tak semua kisah ditulis untuk dibaca kembali. Ada yang cukup dibisikkan ke langit.</p>
     </header>
 
     <nav>
