--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <p class="date">25 Juni 2025</p>
             <p>
                 Kadang aku bertanya, apakah semesta mencatat semua yang kutitipkan diam-diam?
-                Harapan itu bukan hilang, ia hanya tak kembali dalam bentuk yang kuinginkan.
+                Harapan itu tak sepenuhnya hilang, ia hanya tak kembali, dalam bentuk yang kuinginkan.
             </p>
             <p>
-                Maka kutulis, bukan untuk dibaca, tapi untuk dilepaskan. Karena jiwaku sudah terlalu penuh,
-                untuk memikul sunyi yang riuh.
+                Maka kutulis, bukan untuk dibaca, tapi untuk dilepaskan. Karena jiwaku terlalu penuh,
+                untuk memikul sunyi yang terlalu riuh.
             </p>
         </article>
     </main>
