--- a/index.html
+++ b/index.html
@@ -39,5 +39,8 @@
     </footer>
 </body>
 </html>
+<div class="buttons">
+  <a href="archive.html" class="button">Baca Karya</a>
+  <a href="about.html" class="button">Tentang Penulis</a>
+</div>
 
-<a href="archive.html" class="button">Baca Karya</a>
