--- a/archive.html
+++ b/archive.html
@@ -23,94 +23,13 @@
         </p>
       </article>
 
-      <DIANTARA LUKA YANG TAK BERTEPUK
-
-Aku bersalah.
-Itu tak perlu kau ulang.
-Dadaku sudah lebih dulu mengakuinya,
-bahkan sebelum mulutmu melontarkannya.
-
-Aku tahu,
-aku telah mengecewakanmu.
-membuat retak di dinding yang kita bangun bersama.
-Tapi sejak saat itu—
-aku berusaha mencabut duri-duri dari langkahku,
-menjahit ulang caraku mencintai, mengiris bagian buruk dari diriku,
-demi sesuatu yang bisa kau peluk kembali, tanpa ragu.
-
-Aku bukan hanya minta maaf.
-Aku berusaha berubah.Mati-matian.
-Sendiri.Dalam diam.
-Tanpa panggung.
-
-Tapi…
-mengapa tetap kau lihat aku dari kesalahanku,
-bukan dari usaha yang kubayar dengan air mata dan sepi?
-Mengapa kesalahanku jadi senjata yang kau simpan,
-untuk digunakan setiap kali kau tak ingin memelukku, menggenggamku, menyentuhku ?
-
-Aku hanya ingin dimengerti, bukan dibenarkan.
-Dipeluk, bukan dijatuhi dakwaan.
-
-Tapi engkau,
-kau jadi palu yang menghantam dadaku.
-bukan atap yang melindungi saat hujan di dalam diriku,
-tak tahu lagi ke mana harus mencari teduh.
-
-Engkau,
-menjadi tangga yang jatuh saat aku terjerembab,
-menjadi tanya yang tak kunjung kau jawab,
-menjadi jarak yang tak bisa kuukur dengan rindu semata.
-
-Dan aku diam,
-menjadi sunyi yang menampung teriakku sendiri,
-menjadi tisu bagi tangisku sendiri,
-menjadi rumah yang hangus oleh api yang tak pernah kau padamkan.
-
-Aku tahu aku bersalah,
-tapi bukan berarti aku tak layak untuk dimanusiakan.
-Bukan berarti aku hanya pantas dimarahi,
-dan tak diberi ruang untuk diperbaiki, dikasihi, disayangi.
-
-Aku bukan dinding
-yang kau jadikan tempat memukul semua kecewa.
-Aku pun butuh disentuh, dimaafkan, dihargai,
-dan dibaca; seperti puisi lirih yang tak ingin diakhiri.
-
-di luar sana,
-Satu persatu mimpiku mulai tumbang.
-Dan setiap kegagalan itu kian menundukkan punggung dan lututku.
-Dan ketika aku pulang padamu, bukan untuk meminta solusi,
-hanya untuk ditanya: “Kamu baik baik saja ?”
-Tapi kau diam.
-Atau bahkan menambah luka baru,
-seolah-olah aku masih harus membayar kesalahan yang pernah kulunasi dengan seluruh harga diri.
-
-Aku sedang rapuh. Sedang jatuh.
-Sedang kehilangan pijakan.
-Dan saat satu-satunya tempatku pulang
-justru menjadi ruang penghakiman,
-aku tak lagi tahu: di mana aku boleh menangis tanpa dijadikan lemah.
-
-Aku mencintaimu,
-dengan versi yang belum sempurna,
-tapi tak pernah malas untuk belajar.
-Aku mencintaimu,
-dengan dada yang terbuka,
-meski kadang disayat kata-kata.
-
-Tapi aku bertanya,
-bukankah cinta juga butuh empati?
-Bukankah mencinta bukan sekadar mengingat kesalahan,
-tapi juga melihat bagaimana seseorang belajar jadi lebih baik,
-meski hancur dalam prosesnya?
-
-Aku bukan ingin kau lupakan salahku,
-aku hanya ingin kau lihat aku kini:
-yang lebih lembut dalam menatapmu,
-lebih hati-hati dalam bertutur,
-lebih sadar bahwa cinta bukan tentang ingin dimenangkan,
-tapi saling memeluk walau sama-sama pecah.>
+      <article>
+        <h2><a href="karya2.html">Di Antara Luka yang Tak Bertepuk</a></h2>
+        <p class="date">26 Juni 2025</p>
+        <p>
+          Aku bersalah. Itu tak perlu kau ulang. Dadaku sudah lebih dulu mengakuinya...
+        </p>
+      </article>
     </section>
   </main>
 </body>
