--- a/karya2.html
+++ b/karya2.html
@@ -13,6 +13,12 @@
     <a href="archive.html" class="button">⟵ Kembali ke Arsip</a>
   </header>
 
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="archive.html">Archive</a>
+    <a href="about.html">About</a>
+  </nav>
+  
   <main style="max-width: 700px; margin: auto; padding: 2rem; line-height: 1.8;">
     <p>Aku bersalah.<br>
     Itu tak perlu kau ulang.<br>
