--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         
     </header>
 
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Archive</a>
-        <a href="#">About</a>
-    </nav>
+   <nav>
+  <a href="index.html">Home</a>
+  <a href="archive.html">Archive</a>
+  <a href="about.html">About</a>
+</nav>  
 
     <main>
         <article>
