--- a/archive.html
+++ b/archive.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Arsip Tulisan - Scriptum Cordis</title>
+  <title>Archive - Scriptum Cordis</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <h1>Arsip Karya</h1>
     <p class="tagline">Jejak kata yang pernah dititipkan pada langit.</p>
-    <a href="index.html" class="button">⟵ Kembali ke Beranda</a>
+    <a href="index.html" class="button">⟵ Back To Homepage</a>
   </header>
 
   <nav>
@@ -23,7 +23,7 @@
     <section class="arsip">
       <article>
         <h2><a href="karya1.html">Di Antara Harapan yang Tak Kembali</a></h2>
-        <p class="date">25 Juni 2025</p>
+        <p class="date">25 June 2025</p>
         <p>
           Kadang aku bertanya, apakah langit mencatat semua yang kutitipkan diam-diam?
         </p>
@@ -31,7 +31,7 @@
 
       <article>
         <h2><a href="karya2.html">Di Antara Luka yang Tak Bertepuk</a></h2>
-        <p class="date">26 Juni 2025</p>
+        <p class="date">26 June 2025</p>
         <p>
           Aku bersalah. Itu tak perlu kau ulang. Dadaku sudah lebih dulu mengakuinya...
         </p>
