--- a/karya2.html
+++ b/karya2.html
@@ -109,7 +109,7 @@
   </main>
 
   <footer style="text-align: center; padding: 2rem 0;">
-    <p>© 2025 Scriptum Cordis — Ditulis oleh <em>Lumen Obscura</em></p>
+    <p>© 2025 Scriptum Cordis — Written by <em>Lumen Obscura</em></p>
   </footer>
 </body>
 </html>
