--- a/About.html
+++ b/About.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About the writer - Scriptum Cordis</title>
+  <title>About the Writer - Scriptum Cordis</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <h1>About Me</h1>
-    <p class="tagline">"Lumen Obscura — A Name. A bright light, in a dark and grimey city."</p>
-    <a href="index.html" class="button">⟵ Back To Homepage</a>
+    <p class="tagline">"Lumen Obscura — a name, a bright light in a city wrapped in shadows."</p>
+    <a href="index.html" class="button">⟵ Back to Homepage</a>
   </header>
 
   <nav>
@@ -21,28 +21,30 @@
 
   <main style="max-width: 700px; margin: auto; padding: 2rem; line-height: 1.8;">
     <p>
-      Lumen Obscura - Scriptrix umbrarum. Corda loquuntur, etiam si mundus non audiat.
-      I write from the quietest corner of the heart—where words do not ask to be read, only to be understood.
-     </p>
-
-      <p>
-     Lumen Obscura, adalah nama pena dari seseorang yang, lebih banyak menulis dalam diam.
-      walau belakangan ini, ia sudah lama meninggalkan dunia menulis; namun, sudah saatnya untuk
-      kembali kedalam dunia yang sudah lama ia tinggalkan.
-      Lewat untaian kata, ia mencurahkan hal-hal yang tak sempat terucap.
-      tentang kehilangan, tentang cinta yang diam-diam menganga,
-      dan tentang harapan yang tak selalu pulang.
+      <strong>Lumen Obscura</strong> — <em>Scriptrix Umbrarum.</em><br />
+      Corda loquuntur, etiam si mundus non audiat.<br />
+      I write from the quietest corner of the heart — where words do not ask to be read, only to be understood.
     </p>
 
     <p>
-      Scriptum Cordis, Solum Caelis. - sub silentio, veritas.
-      Beneath the silence, the truth.
-      Scriptum Cordis, Solum Caelis lahir dari ruang sunyi dalam dada,
-      tempat kata-kata tumbuh menjadi penghibur, saksi, dan pelindung bagi jiwa yang nyaris karam.
+      Lumen Obscura adalah nama pena dari seseorang yang lebih sering menulis dalam diam.  
+      Meski sempat menjauh dari dunia tulisan, kini ia kembali — menyusuri jejak-jejak sunyi yang dulu pernah ia tinggalkan.
     </p>
 
     <p>
-      Website ini bukan tempat untuk didengar, melainkan dibaca.
+      Lewat untaian kata, ia mencurahkan hal-hal yang tak sempat terucap:  
+      tentang kehilangan, cinta yang diam-diam menganga,  
+      dan harapan yang tak selalu pulang.
+    </p>
+
+    <p>
+      <strong>Scriptum Cordis, Solum Caelis</strong> — <em>sub silentio, veritas.</em><br />
+      Beneath the silence, the truth.  
+      Website ini lahir dari ruang sunyi dalam dada, tempat kata-kata tumbuh menjadi penghibur, saksi, dan pelindung bagi jiwa yang nyaris karam.
+    </p>
+
+    <p>
+      Ini bukan tempat untuk didengar, melainkan untuk dibaca.  
       Dan mungkin, suatu hari nanti, dipahami.
     </p>
   </main>
