--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="logo-lily.png" alt="Logo Bunga Lily" style="width: 120px; margin-bottom: 1rem;" />
         <h1>Scriptum Cordis, Solum Caelis</h1>
         <p class="tagline">Karena tak semua kisah ditulis untuk dibaca kembali. Ada yang cukup dibisikkan ke langit.</p>
         
