--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-        <img src="58cce829-a320-4a6b-9232-501619d06593.png" alt="Logo Bunga Lily" style="width: 360px; margin-bottom: 1rem;" />
+        
+        <img src="58cce829-a320-4a6b-9232-501619d06593.png" alt="Logo Bunga Lily" style="width: 360px; display: block; margin: 0 auto 1rem auto;" />
         <h1>Scriptum Cordis, Solum Caelis</h1>
         <p class="tagline">Karena tak semua kisah ditulis untuk dibaca kembali. Ada yang cukup dibisikkan ke langit.</p>
         
