--- a/archive.html
+++ b/archive.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <header>
-    <h1>Arsip Karya</h1>
-    <p class="tagline">Jejak kata yang pernah dititipkan pada langit.</p>
+    <h1>Literary Works Archive</h1>
+    <p class="tagline">Jejak kata yang pernah dititipkan pada semesta.</p>
     <a href="index.html" class="button">⟵ Back To Homepage</a>
   </header>
 
