--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <header>
+    <img src="58cce829-a320-4a6b-9232-501619d06593.png" alt="Logo Bunga Lily" style="width: 120px; display: block; margin: 0 auto 1rem auto;" />
     <h1>About Me</h1>
     <p class="tagline">"Lumen Obscura — a name, a bright light in a city wrapped in shadows."</p>
     <a href="index.html" class="button">⟵ Back to Homepage</a>
