--- a/karya2.html
+++ b/karya2.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <header>
+    <img src="58cce829-a320-4a6b-9232-501619d06593.png" alt="Logo Bunga Lily" style="width: 120px; display: block; margin: 0 auto 1rem auto;" />
     <h1>Di Antara Luka yang Tak Bertepuk</h1>
     <p class="tagline">“Curahan luka yang tak sempat dimengerti.”</p>
     <a href="archive.html" class="button">⟵ Kembali ke Arsip</a>
