--- a/archive.html
+++ b/archive.html
@@ -10,7 +10,7 @@
   <header>
     <img src="58cce829-a320-4a6b-9232-501619d06593.png" alt="Logo Bunga Lily" style="width: 120px; display: block; margin: 0 auto 1rem auto;" />
     <h1>Literary Works Archive</h1>
-    <p class="tagline">Jejak kata yang pernah dititipkan pada semesta.</p>
+    <p class="tagline">Jejak kata yang dititipkan pada semesta.</p>
     <a href="index.html" class="button">⟵ Back To Homepage</a>
   </header>
 
