--- a/karya2.html
+++ b/karya2.html
@@ -29,27 +29,27 @@
     <p>Aku tahu,<br>
     aku telah mengecewakanmu.<br>
     Membuat retak di dinding yang kita bangun bersama.<br>
-    Tapi sejak saat itu—<br>
-    aku berusaha mencabut duri-duri dari langkahku,<br>
-    menjahit ulang caraku mencintai, mengiris bagian buruk dari diriku,<br>
+    Tapi sejak saat itu,<br>
+    aku berusaha mencabut duri duri dari langkahku.<br>
+    Menjahit ulang caraku mencintai, mengiris bagian buruk dari diriku,<br>
     demi sesuatu yang bisa kau peluk kembali, tanpa ragu.</p>
 
-    <p>Aku bukan hanya minta maaf.<br>
-    Aku berusaha berubah. Mati-matian.<br>
-    Sendiri. Dalam diam.<br>
+    <p>Aku bukan hanya meminta maaf.<br>
+    Aku berusaha berubah. Mati matian.<br>
+    Sendirian. Dalam diam.<br>
     Tanpa panggung.</p>
 
-    <p>Tapi…<br>
-    mengapa tetap kau lihat aku dari kesalahanku,<br>
-    bukan dari usaha yang kubayar dengan air mata dan sepi?<br>
-    Mengapa kesalahanku jadi senjata yang kau simpan,<br>
-    untuk digunakan setiap kali kau tak ingin memelukku, menggenggamku, menyentuhku?</p>
+    <p>Tetapi;<br>
+    mengapa tetap kau lihat aku, dari kesalahanku?<br>
+    Bukan dari usaha yang kubayar dengan air mata dan sepi?<br>
+    Mengapa kesalahanku jadi senjata yang kau simpan?<br>
+    untuk digunakan setiap kali kau tak ingin melihatku, menyentuhku, menggenggamku, memelukku?</p>
 
     <p>Aku hanya ingin dimengerti, bukan dibenarkan.<br>
     Dipeluk, bukan dijatuhi dakwaan.</p>
 
     <p>Engkau,<br>
-    jadi palu yang menghantam dadaku.<br>
+    Menjadi palu yang menghantam dadaku.<br>
     Bukan atap yang melindungi saat hujan di dalam diriku,<br>
     tak tahu lagi ke mana harus mencari teduh.</p>
 
@@ -58,42 +58,42 @@
     menjadi tanya yang tak kunjung kau jawab,<br>
     menjadi jarak yang tak bisa kuukur dengan rindu semata.</p>
 
-    <p>Dan aku diam,<br>
+    <p>Dan aku terdiam,<br>
     menjadi sunyi yang menampung teriakku sendiri,<br>
     menjadi tisu bagi tangisku sendiri,<br>
-    menjadi rumah yang hangus oleh api yang tak pernah kau padamkan.</p>
+    menjadi rumah yang hangus oleh api, yang tak pernah kau padamkan.</p>
 
     <p>Aku tahu aku bersalah,<br>
     tapi bukan berarti aku tak layak untuk dimanusiakan.<br>
-    Bukan berarti aku hanya pantas dimarahi,<br>
+    Bukan berarti aku hanya pantas dimarahi, dihakimi,<br>
     dan tak diberi ruang untuk diperbaiki, dikasihi, disayangi.</p>
 
-    <p>Aku bukan dinding<br>
+    <p>Aku bukan dinding,<br>
     yang kau jadikan tempat memukul semua kecewa.<br>
     Aku pun butuh disentuh, dimaafkan, dihargai,<br>
-    dan dibaca; seperti puisi lirih yang tak ingin diakhiri.</p>
+    dan dibaca; laksana puisi yang tak ingin diakhiri.</p>
 
     <p>Di luar sana,<br>
     satu per satu mimpiku mulai tumbang.<br>
-    Dan setiap kegagalan itu kian menundukkan punggung dan lututku.<br>
+    Dan setiap kegagalan itu, kian menundukkan punggung dan lututku.<br>
     Dan ketika aku pulang padamu, bukan untuk meminta solusi,<br>
-    hanya untuk ditanya: “Kamu baik-baik saja?”<br>
-    Tapi kau diam.<br>
-    Atau bahkan menambah luka baru,<br>
-    seolah-olah aku masih harus membayar kesalahan yang pernah kulunasi dengan seluruh harga diri.</p>
+    hanya untuk ditanya: “Kamu baik-baik saja?”, "tak apa, ada aku disini sayang"<br>
+    Tetapi engkau terdiam.<br>
+    Atau bahkan, menambah luka baru.<br>
+    seolah olah aku masih harus membayar kesalahan yang pernah kulunasi dengan seluruh harga diri.</p>
 
-    <p>Aku sedang rapuh. Sedang jatuh.<br>
+    <p>Aku sedang rapuh. Sedang terjatuh.<br>
     Sedang kehilangan pijakan.<br>
-    Dan saat satu-satunya tempatku pulang<br>
-    justru menjadi ruang penghakiman,<br>
-    aku tak lagi tahu: di mana aku boleh menangis tanpa dijadikan lemah.</p>
+    Dan saat satu satunya tempatku pulang,<br>
+    justru menjadi ruang penghakiman.<br>
+    aku tak lagi tahu; di mana aku boleh menangis tanpa dijadikan lemah.</p>
 
-    <p>Aku mencintaimu,<br>
-    dengan versi yang belum sempurna,<br>
+    <p>Aku mencintaimu.<br>
+    Dengan versi yang belum sempurna,<br>
     tapi tak pernah malas untuk belajar.<br>
     Aku mencintaimu,<br>
     dengan dada yang terbuka,<br>
-    meski kadang disayat kata-kata.</p>
+    meski kadang disayat kata kata.</p>
 
     <p>Tapi aku bertanya,<br>
     bukankah cinta juga butuh empati?<br>
@@ -102,11 +102,11 @@
     meski hancur dalam prosesnya?</p>
 
     <p>Aku bukan ingin kau lupakan salahku,<br>
-    aku hanya ingin kau lihat aku kini:<br>
+    aku hanya ingin kau lihat aku kini;<br>
     yang lebih lembut dalam menatapmu,<br>
-    lebih hati-hati dalam bertutur,<br>
+    lebih hati hati dalam bertutur,<br>
     lebih sadar bahwa cinta bukan tentang ingin dimenangkan,<br>
-    tapi saling memeluk walau sama-sama pecah.</p>
+    tapi saling memeluk walau sama sama pecah.</p>
   </main>
 
   <footer style="text-align: center; padding: 2rem 0;">
