--- a/about.html
+++ b/about.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <header>
-    <img src="58cce829-a320-4a6b-9232-501619d06593.png" alt="Logo Bunga Lily" style="width: 120px; display: block; margin: 0 auto 1rem auto;" />
+    <img src="58cce829-a320-4a6b-9232-501619d06593.png" alt="Logo Bunga Lily" style="width: 60px; display: block; margin: 0 auto 1rem auto;" />
     <h1>About Me</h1>
-    <p class="tagline">"Lumen Obscura — a name, a bright light in a city wrapped in shadows."</p>
+    <p class="tagline">"Lumen Obscura — a name. a bright light, in a grimey city."</p>
     <a href="index.html" class="button">⟵ Back to Homepage</a>
   </header>
 
@@ -24,16 +24,16 @@
     <p>
       <strong>Lumen Obscura</strong> — <em>Scriptrix Umbrarum.</em><br />
       Corda loquuntur, etiam si mundus non audiat.<br />
-      I write from the quietest corner of the heart — where words do not ask to be read, only to be understood.
+      I write from the quietest corner of the heart; where words do not ask to be read, only to be understood.
     </p>
 
     <p>
       Lumen Obscura adalah nama pena dari seseorang yang lebih sering menulis dalam diam.  
-      Meski sempat menjauh dari dunia tulisan, kini ia kembali — menyusuri jejak-jejak sunyi yang dulu pernah ia tinggalkan.
+      Meski sempat menjauh dari dunia tulisan, kini ia kembali, menyusuri jejak-jejak sunyi yang dulu pernah ia tinggalkan.
     </p>
 
     <p>
-      Lewat untaian kata, ia mencurahkan hal-hal yang tak sempat terucap:  
+      Lewat untaian kata, ia mencurahkan hal hal yang tak sempat terucap:  
       tentang kehilangan, cinta yang diam-diam menganga,  
       dan harapan yang tak selalu pulang.
     </p>
@@ -41,7 +41,7 @@
     <p>
       <strong>Scriptum Cordis, Solum Caelis</strong> — <em>sub silentio, veritas.</em><br />
       Beneath the silence, the truth.  
-      Website ini lahir dari ruang sunyi dalam dada, tempat kata-kata tumbuh menjadi penghibur, saksi, dan pelindung bagi jiwa yang nyaris karam.
+      Website ini lahir dari ruang sunyi dalam dada, tempat kata kata tumbuh menjadi penghibur, saksi, dan pelindung bagi jiwa yang nyaris karam.
     </p>
 
     <p>
