--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="58cce829-a320-4a6b-9232-501619d06593.png" alt="Logo Bunga Lily" style="width: 60px; display: block; margin: 0 auto 1rem auto;" />
+    <img src="58cce829-a320-4a6b-9232-501619d06593.png" alt="Logo Bunga Lily" style="width: 120px; display: block; margin: 0 auto 1rem auto;" />
     <h1>About Me</h1>
     <p class="tagline">"Lumen Obscura — a name. a bright light, in a grimey city."</p>
     <a href="index.html" class="button">⟵ Back to Homepage</a>
@@ -28,23 +28,37 @@
     </p>
 
     <p>
-      Lumen Obscura adalah nama pena dari seseorang yang lebih sering menulis dalam diam.  
-      Meski sempat menjauh dari dunia tulisan, kini ia kembali, menyusuri jejak-jejak sunyi yang dulu pernah ia tinggalkan.
+      Lumen Obscura adalah nama pena dari seseorang yang lebih sering menulis dalam waktu luangnya.  
+      Meski sempat menjauh dari dunia tulisan, kini ia kembali, menyusuri jejak jejak sunyi yang dulu pernah ia tinggalkan.
     </p>
 
     <p>
       Lewat untaian kata, ia mencurahkan hal hal yang tak sempat terucap:  
-      tentang kehilangan, cinta yang diam-diam menganga,  
-      dan harapan yang tak selalu pulang.
+      tentang rasa gundah gulana, tetang kehilangan, tetang cinta,  
+      dan tak pula lupa, harapan yang tak selalu pulang.
     </p>
 
     <p>
       <strong>Scriptum Cordis, Solum Caelis</strong> — <em>sub silentio, veritas.</em><br />
       Beneath the silence, the truth.  
-      Website ini lahir dari ruang sunyi dalam dada, tempat kata kata tumbuh menjadi penghibur, saksi, dan pelindung bagi jiwa yang nyaris karam.
+      some of you might ask - what is scriptum cordis, solum caelis ? it translates to
+      a writing of the heart, grounded in the heavens. the philosophy behind this is that
+      It represents a space where words are not merely crafted,
+      but born from the depth of feeling —
+      untouched by earthly bounds, floating freely through the skies,
+      seeking no place but the embrace of the universe.
+    </p>
+    <p>
+      Every piece written here is a reflection of the silent echoes within,
+      a whisper from the soul to the stars,
+      a reminder that not all stories are meant to be explained,
+      some are simply meant to be felt,
+      to drift gently into the vastness of existence,
+      and find rest not on paper, but in the quiet spaces between hearts.
     </p>
 
     <p>
+      Singkatnya,
       Ini bukan tempat untuk didengar, melainkan untuk dibaca.  
       Dan mungkin, suatu hari nanti, dipahami.
     </p>
