--- a/about.html
+++ b/about.html
@@ -24,12 +24,14 @@
     <p>
       <strong>Lumen Obscura</strong> — <em>Scriptrix Umbrarum.</em><br />
       Corda loquuntur, etiam si mundus non audiat.<br />
-      I write from the quietest corner of the heart; where words do not ask to be read, only to be understood.
+      I write from the quietest corner of the heart;<br>
+      where words do not ask to be read, only to be understood.
     </p>
 
     <p>
-      Lumen Obscura adalah nama pena dari seseorang yang lebih sering menulis dalam waktu luangnya.<br>  
-      Meski sempat menjauh dari dunia tulisan, kini ia kembali, menyusuri jejak jejak sunyi yang dulu pernah ia tinggalkan.<br>
+      Lumen Obscura adalah sebuah nama pena dari seseorang yang lebih sering menulis dalam waktu luangnya.
+      Meski sempat menjauh dari dunia tulisan, kini ia kembali, menyusuri jejak jejak sunyi-<br>
+      yang dulu pernah ia tinggalkan.<br>
     </p>
 
     <p>
@@ -42,30 +44,25 @@
     
     <p>
       <strong>Scriptum Cordis, Solum Caelis</strong> — <em>sub silentio, veritas.</em><br />
-      Beneath the silence, the truth.  
+      Beneath the silence, the truth.<br>
       some of you might ask - what is scriptum cordis, solum caelis?<br>
       it translates to a writing of the heart, grounded in the heavens.<br>
-      the philosophy behind this is that,<br>
-      It represents a space where words are not merely crafted,<br>
-      but born from the depth of feeling;<br>
-      untouched by earthly bounds, floating freely through the skies,<br>
+      the philosophy behind this is that, It represents a space where words are not merely crafted,
+      but born from the depth of feeling; untouched by earthly bounds, floating freely through the skies,<br>
       seeking no place but the embrace of the universe.<br>
     </p>
     <p>
       Every piece written here is a reflection of the silent echoes within,<br>
-      a whisper from the soul to the stars,<br>
-      a reminder that not all stories are meant to be explained,<br>
-      some are simply meant to be felt,<br>
-      to drift gently into the vastness of existence,<br>
+      a whisper from the soul to the stars, a reminder that not all stories are meant to be explained,<br>
+      some are simply meant to be felt, to drift gently into the vastness of existence,<br>
       and find rest not on paper, but in the quiet spaces between hearts.<br>
     </p>
-
 
     
     <p>
       Singkatnya,<br>
-      Ini bukan tempat untuk didengar, melainkan untuk dibaca. <br> 
-      Dan mungkin, suatu hari nanti, <em>>dipahami.</em><br>
+      Ini bukan tempat untuk didengar, melainkan untuk dibaca.<br> 
+      Dan mungkin, suatu hari nanti, <em>dipahami.</em><br>
     </p>
   </main>
 
