--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
         <img src="58cce829-a320-4a6b-9232-501619d06593.png" alt="Logo Bunga Lily" style="width: 120px; display: block; margin: 0 auto 1rem auto;" />
         <h1>Scriptum Cordis, Solum Caelis</h1>
-        <p class="tagline">Karena tak semua kisah ditulis untuk dibaca kembali. Ada yang cukup dibisikkan ke langit.</p>
+        <p class="tagline">Ditulis oleh rasa, mengalun pada angkasa, dan menetap dalam pelukan semesta.</p>
         
     </header>
 
