--- a/karya2.html
+++ b/karya2.html
@@ -10,8 +10,8 @@
   <header>
     <img src="58cce829-a320-4a6b-9232-501619d06593.png" alt="Logo Bunga Lily" style="width: 120px; display: block; margin: 0 auto 1rem auto;" />
     <h1>Di Antara Luka yang Tak Bertepuk</h1>
-    <p class="tagline">“Curahan luka yang tak sempat dimengerti.”</p>
-    <a href="archive.html" class="button">⟵ Kembali ke Arsip</a>
+    <p class="tagline">“Yang tak sempat dimengerti.”</p>
+    <a href="archive.html" class="button">⟵ Back To Archive</a>
   </header>
 
   <nav>
@@ -43,7 +43,8 @@
     mengapa tetap kau lihat aku, dari kesalahanku?<br>
     Bukan dari usaha yang kubayar dengan air mata dan sepi?<br>
     Mengapa kesalahanku jadi senjata yang kau simpan?<br>
-    untuk digunakan setiap kali kau tak ingin melihatku, menyentuhku, menggenggamku, memelukku?</p>
+    untuk digunakan setiap kali kau tak ingin melihatku,<br>
+      menyentuhku, menggenggamku, memelukku?</p>
 
     <p>Aku hanya ingin dimengerti, bukan dibenarkan.<br>
     Dipeluk, bukan dijatuhi dakwaan.</p>
@@ -61,7 +62,8 @@
     <p>Dan aku terdiam,<br>
     menjadi sunyi yang menampung teriakku sendiri,<br>
     menjadi tisu bagi tangisku sendiri,<br>
-    menjadi rumah yang hangus oleh api, yang tak pernah kau padamkan.</p>
+    menjadi rumah yang hangus oleh api,<br>
+    yang tak pernah kau padamkan.</p>
 
     <p>Aku tahu aku bersalah,<br>
     tapi bukan berarti aku tak layak untuk dimanusiakan.<br>
@@ -77,16 +79,19 @@
     satu per satu mimpiku mulai tumbang.<br>
     Dan setiap kegagalan itu, kian menundukkan punggung dan lututku.<br>
     Dan ketika aku pulang padamu, bukan untuk meminta solusi,<br>
-    hanya untuk ditanya: “Kamu baik-baik saja?”, "tak apa, ada aku disini sayang"<br>
-    Tetapi engkau terdiam.<br>
+    hanya untuk ditanya: “Kamu baik baik saja sayang?”, "tak apa, ada aku disini sayang"<br>
+    "Dunia boleh jahat sama kamu, tapi kamu selalu punya aku, sayang."<br>
+    Tetapi, engkau terdiam.<br>
     Atau bahkan, menambah luka baru.<br>
-    seolah olah aku masih harus membayar kesalahan yang pernah kulunasi dengan seluruh harga diri.</p>
+    seolah olah aku masih harus membayar kesalahan<br>
+    yang pernah kulunasi dengan seluruh harga diri.</p>
 
     <p>Aku sedang rapuh. Sedang terjatuh.<br>
     Sedang kehilangan pijakan.<br>
     Dan saat satu satunya tempatku pulang,<br>
     justru menjadi ruang penghakiman.<br>
-    aku tak lagi tahu; di mana aku boleh menangis tanpa dijadikan lemah.</p>
+    aku tak lagi tahu; di mana aku bisa menangis,<br>
+    tanpa dianggap lemah.</p>
 
     <p>Aku mencintaimu.<br>
     Dengan versi yang belum sempurna,<br>
@@ -101,8 +106,8 @@
     tapi juga melihat bagaimana seseorang belajar jadi lebih baik,<br>
     meski hancur dalam prosesnya?</p>
 
-    <p>Aku bukan ingin kau lupakan salahku,<br>
-    aku hanya ingin kau lihat aku kini;<br>
+    <p>Aku bukan ingin kamu melupakan salahku,<br>
+    aku hanya ingin kamu lihat aku kini;<br>
     yang lebih lembut dalam menatapmu,<br>
     lebih hati hati dalam bertutur,<br>
     lebih sadar bahwa cinta bukan tentang ingin dimenangkan,<br>
