--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
     <footer>
         <p>© 2025 Scriptum Cordis, Solum Caelis — Written by <em>Lumen Obscura</em></p>
     </footer>
+
+    <!-- Pemutar Musik -->
+<audio id="player" autoplay hidden></audio>
+
+<!-- Kontrol Volume -->
+<div id="music-controls">
+  <button id="toggle-mute">🔊</button>
+  <span id="now-playing"></span>
+</div>
+
+    
     <audio id="player" autoplay hidden></audio>
 
 <script>
