--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
 <script>
   const playlist = [
-    "lagu1.mp3", "lagu2.mp3", "lagu3.mp3", "lagu4.mp3",
-    "lagu5.mp3", "lagu6.mp3", "lagu7.mp3", "lagu8.mp3",
+    "Take You There X No BS.mp3", "Love You Too Much.mp3", "Skip This Part.mp3", "Unmistakable.mp3",
+    "I Have Nothing.mp3", "On My Way.mp3", "lagu7.mp3", "lagu8.mp3",
     "lagu9.mp3", "lagu10.mp3", "lagu11.mp3", "lagu12.mp3"
   ];
 
