--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 <script>
   const playlist = [
     "Take You There X No BS.mp3", "Love You Too Much.mp3", "Skip This Part.mp3", "Unmistakable.mp3",
-    "I Have Nothing.mp3", "On My Way.mp3", "lagu7.mp3", "lagu8.mp3",
-    "lagu9.mp3", "lagu10.mp3", "lagu11.mp3", "lagu12.mp3"
+    "I Have Nothing.mp3", "On My Way.mp3", "Rahasia Hati.mp3", "Cool Enough For You.mp3",
+    "Saturn X Slow Dancing.mp3", "Make You Mine.mp3", "Love Me.mp3", "Limbo.mp3"
   ];
 
   function shuffle(array) {
