--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
             <h2>Di Antara Harapan yang Tak Kembali</h2>
             <p class="date">25 Juni 2025</p>
             <p>
-                Kadang aku bertanya, apakah semesta mencatat semua yang kutitipkan diam-diam?
-                Harapan itu tak sepenuhnya hilang, ia hanya tak kembali, dalam bentuk yang kuinginkan.
+                Kadang aku bertanya, apakah semesta mencatat semua yang kutitipkan diam diam?<br>
+                Karena harapan itu tak sepenuhnya hilang, ia hanya tak kembali, dalam bentuk yang kuinginkan.
             </p>
             <p>
-                Maka kutulis, bukan untuk dibaca, tapi untuk dilepaskan. Karena jiwaku terlalu penuh,
-                untuk memikul sunyi yang terlalu riuh.
+                Maka kutulis, bukan untuk dibaca, tapi untuk dilepaskan.<br>
+                Karena jiwaku terlalu penuh, untuk memikul sunyi yang terlalu riuh.
             </p>
         </article>
     </main>
@@ -91,7 +91,7 @@
     function playNext() {
       const track = shuffled[current];
       player.src = track;
-      player.volume = 0.15;
+      player.volume = 0.25;
       nowPlaying.textContent = "Now Playing: " + formatTrackName(track);
       console.log("Menyetel lagu:", track);
       player.play().catch(err => {
