--- a/index.html
+++ b/index.html
@@ -1,125 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scriptum Cordis, Solum Caelis</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Scriptum Cordis, Solum Caelis</title>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro&family=Playfair+Display:ital,wght@1,700&display=swap" rel="stylesheet">
+  
+  <!-- Stylesheet -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        
-        <img src="58cce829-a320-4a6b-9232-501619d06593.png" alt="Logo Bunga Lily" style="width: 120px; display: block; margin: 0 auto 1rem auto;" />
-        <h1>Scriptum Cordis, Solum Caelis</h1>
-        <p class="tagline">Ditulis oleh rasa, mengalun pada angkasa, dan menetap dalam pelukan semesta.</p>
-        
-    </header>
+  <header>
+    <!-- Logo dengan animasi -->
+    <img src="58cce829-a320-4a6b-9232-501619d06593.png" alt="Logo Bunga Lily" class="logo-lily" />
 
-   <nav>
-  <a href="index.html">Home</a>
-  <a href="archive.html">Archive</a>
-  <a href="about.html">About</a>
-</nav>  
+    <h1>Scriptum Cordis, Solum Caelis</h1>
+    <p class="tagline">Ditulis oleh rasa, mengalun pada angkasa, dan menetap dalam pelukan semesta.</p>
+  </header>
 
-    <main>
-        <article>
-            <h2>Di Antara Harapan yang Tak Kembali</h2>
-            <p class="date">25 Juni 2025</p>
-            <p>
-                Kadang aku bertanya, apakah semesta mencatat semua yang kutitipkan diam diam?<br>
-                Karena harapan itu tak sepenuhnya hilang, ia hanya tak kembali, dalam bentuk yang kuinginkan.
-            </p>
-            <p>
-                Maka kutulis, bukan untuk dibaca, tapi untuk dilepaskan.<br>
-                Karena jiwaku terlalu penuh, untuk memikul sunyi yang terlalu riuh.
-            </p>
-        </article>
-    </main>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="archive.html">Archive</a>
+    <a href="about.html">About</a>
+  </nav>
 
-    <footer>
-        <p>© 2025 Scriptum Cordis, Solum Caelis — Written by <em>Lumen Obscura</em></p>
-    </footer>
+  <main>
+    <article>
+      <h2>Di Antara Harapan yang Tak Kembali</h2>
+      <p class="date">25 Juni 2025</p>
+      <p>
+        Kadang aku bertanya, apakah semesta mencatat semua yang kutitipkan diam diam?<br>
+        Karena harapan itu tak sepenuhnya hilang, ia hanya tak kembali, dalam bentuk yang kuinginkan.
+      </p>
+      <p>
+        Maka kutulis, bukan untuk dibaca, tapi untuk dilepaskan.<br>
+        Karena jiwaku terlalu penuh, untuk memikul sunyi yang terlalu riuh.
+      </p>
+    </article>
+  </main>
 
-    <!-- Pemutar Musik -->
-<audio id="player" autoplay hidden></audio>
+  <footer>
+    <p>© 2025 Scriptum Cordis, Solum Caelis — Written by <em>Lumen Obscura</em></p>
+  </footer>
 
-<!-- Kontrol Volume -->
-<div id="music-controls">
-  <button id="toggle-mute">🔊</button>
-  <span id="now-playing"></span>
-</div>
+  <!-- Pemutar Musik -->
+  <audio id="player" autoplay hidden></audio>
+  <div id="music-controls">
+    <button id="toggle-mute">🔊</button>
+    <span id="now-playing"></span>
+  </div>
 
-<script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const playlist = [
-      "take_you_there_x_no_bs.mp3",
-      "love_you_too_much.mp3",
-      "skip_this_part.mp3",
-      "unmistakable.mp3",
-      "i_have_nothing.mp3",
-      "on_my_way.mp3",
-      "rahasia_hati.mp3",
-      "cool_enough_for_you.mp3",
-      "saturn_x_slow_dancing.mp3",
-      "make_you_mine.mp3",
-      "love_me.mp3",
-      "limbo.mp3"
-    ];
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const playlist = [
+        "take_you_there_x_no_bs.mp3",
+        "love_you_too_much.mp3",
+        "skip_this_part.mp3",
+        "unmistakable.mp3",
+        "i_have_nothing.mp3",
+        "on_my_way.mp3",
+        "rahasia_hati.mp3",
+        "cool_enough_for_you.mp3",
+        "saturn_x_slow_dancing.mp3",
+        "make_you_mine.mp3",
+        "love_me.mp3",
+        "limbo.mp3"
+      ];
 
-    function shuffle(array) {
-      for (let i = array.length - 1; i > 0; i--) {
-        const j = Math.floor(Math.random() * (i + 1));
-        [array[i], array[j]] = [array[j], array[i]];
+      function shuffle(array) {
+        for (let i = array.length - 1; i > 0; i--) {
+          const j = Math.floor(Math.random() * (i + 1));
+          [array[i], array[j]] = [array[j], array[i]];
+        }
+        return array;
       }
-      return array;
-    }
 
-    const player = document.getElementById("player");
-    const nowPlaying = document.getElementById("now-playing");
-    const toggleMute = document.getElementById("toggle-mute");
+      const player = document.getElementById("player");
+      const nowPlaying = document.getElementById("now-playing");
+      const toggleMute = document.getElementById("toggle-mute");
 
-    let shuffled = shuffle([...playlist]);
-    let current = 0;
+      let shuffled = shuffle([...playlist]);
+      let current = 0;
 
-    function formatTrackName(filename) {
-      return filename
-        .replace(".mp3", "")
-        .replace(/_/g, " ")
-        .replace(/\b\w/g, l => l.toUpperCase()); // Kapitalisasi setiap kata
-    }
+      function formatTrackName(filename) {
+        return filename
+          .replace(".mp3", "")
+          .replace(/_/g, " ")
+          .replace(/\b\w/g, l => l.toUpperCase());
+      }
 
-    function playNext() {
-      const track = shuffled[current];
-      player.src = track;
-      player.volume = 0.25;
-      nowPlaying.textContent = "Now Playing: " + formatTrackName(track);
-      console.log("Menyetel lagu:", track);
-      player.play().catch(err => {
-        console.log("Gagal autoplay:", err);
+      function playNext() {
+        const track = shuffled[current];
+        player.src = track;
+        player.volume = 0.25;
+        nowPlaying.textContent = "Now Playing: " + formatTrackName(track);
+        player.play().catch(err => console.log("Gagal autoplay:", err));
+      }
+
+      player.addEventListener("ended", () => {
+        current = (current + 1) % shuffled.length;
+        playNext();
       });
-    }
 
-    player.addEventListener("ended", () => {
-      current = (current + 1) % shuffled.length;
+      toggleMute.addEventListener("click", () => {
+        player.muted = !player.muted;
+        toggleMute.textContent = player.muted ? "🔇" : "🔊";
+      });
+
+      document.body.addEventListener("click", function firstClick() {
+        player.play().catch(() => {});
+        document.body.removeEventListener("click", firstClick);
+      });
+
       playNext();
     });
-
-    toggleMute.addEventListener("click", () => {
-      player.muted = !player.muted;
-      toggleMute.textContent = player.muted ? "🔇" : "🔊";
-    });
-
-    // Fix autoplay di HP: mulai setelah interaksi
-    function firstInteraction() {
-      player.play().catch(() => {});
-      document.body.removeEventListener("click", firstInteraction);
-    }
-    document.body.addEventListener("click", firstInteraction);
-
-    // Mulai sekali
-    playNext();
-  });
-</script>
-   
+  </script>
 </body>
 </html>
